<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-apps-hub</artifactId>
  <version>0.0.3</version>

  <properties>
    <javapackager.name>Hub</javapackager.name>
    <javapackager.assetsDir>src/main/package</javapackager.assetsDir>
  </properties>

  <profiles>
    <profile>
      <id>release</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <properties>
        <installer>false</installer>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>pl.project13.maven</groupId>
            <artifactId>git-commit-id-plugin</artifactId>
            <version>4.9.10</version>
            <executions>
              <execution>
                <id>get-the-git-infos</id>
                <goals>
                  <goal>revision</goal>
                </goals>
                <phase>initialize</phase>
              </execution>
            </executions>
            <configuration>
              <generateGitPropertiesFile>false</generateGitPropertiesFile>
              <includeOnlyProperties>
                <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
              </includeOnlyProperties>
              <commitIdGenerationMode>full</commitIdGenerationMode>
            </configuration>
          </plugin>

          <plugin>
            <groupId>io.github.fvarrui</groupId>
            <artifactId>javapackager</artifactId>
            <version>1.7.5</version>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>package</goal>
                </goals>
                <configuration>
                  <name>${javapackager.name}</name>
                  <organizationName>Copyright © 2023 by vavi, All rights reserved.</organizationName>

                  <mainClass>vavi.apps.hub.Main</mainClass>
                  <runnableJar>${project.artifactId}-${project.version}.jar</runnableJar>
                  <generateInstaller>${installer}</generateInstaller>
                  <bundleJre>false</bundleJre>
                  <jreMinVersion>17</jreMinVersion>

                  <assetsDir>${javapackager.assetsDir}</assetsDir>

                  <additionalResources>
                    <additionalResource>${project.build.resources[0].directory}/logging.properties</additionalResource>
                    <additionalResource>${project.build.resources[0].directory}/static</additionalResource>
                    <additionalResource>local.properties</additionalResource>
                  </additionalResources>

                  <vmArgs>
                    <vmArg>--add-opens</vmArg>
                    <vmArg>java.desktop/com.apple.eawt=ALL-UNNAMED</vmArg>
                    <vmArg>--add-opens</vmArg>
                    <vmArg>java.base/java.lang=ALL-UNNAMED</vmArg>
                    <vmArg>-Djna.library.path=/usr/local/lib:.</vmArg>
                    <vmArg>-Dapple.laf.useScreenMenuBar=true</vmArg>
                    <vmArg>-Djava.util.logging.config.file=./logging.properties</vmArg>
                  </vmArgs>

                  <macConfig>
                    <!-- true cause error -->
                    <codesignApp>false</codesignApp>
                    <generatePkg>false</generatePkg>
                    <infoPlist>
                      <additionalEntries>
                        <![CDATA[
                      <key>CFBundleName</key>
                      <string>${javapackager.name}</string>
                      <key>CFBundleShortVersionString</key>
                      <string>${git.build.time}</string>
                    ]]>
                      </additionalEntries>
                    </infoPlist>
                  </macConfig>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <argLine>
            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
          </argLine>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.10.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey</groupId>
        <artifactId>jersey-bom</artifactId>
        <version>3.1.5</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-bom</artifactId>
        <version>12.0.7</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-commons</artifactId>
      <version>1.1.12</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-awt-joystick</artifactId>
      <version>0.0.11</version>
    </dependency>

    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.10.1</version>
    </dependency>

    <!-- web socket -->
    <dependency>
      <groupId>jakarta.websocket</groupId>
      <artifactId>jakarta.websocket-api</artifactId>
      <version>2.1.1</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty.ee10.websocket</groupId>
      <artifactId>jetty-ee10-websocket-jakarta-server</artifactId>
      <version>12.0.7</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-server</artifactId> <!-- even patch version update, jetty changes api -->
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-util</artifactId> <!-- even patch version update, jetty changes api -->
    </dependency>

    <!-- rest -->
    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-jetty-http</artifactId>
      <exclusions>
        <exclusion>
          <groupId>org.eclipse.jetty</groupId>
          <artifactId>jetty-server</artifactId> <!-- even patch version update, jetty changes api -->
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-jetty-servlet</artifactId>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.inject</groupId>
      <artifactId>jersey-hk2</artifactId>
    </dependency>
    <dependency>
      <groupId>org.eclipse.angus</groupId>
      <artifactId>angus-activation</artifactId>
      <version>2.0.2</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf</artifactId>
      <version>3.4.1</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-script-apple</artifactId>
      <version>1.2.2</version>
      <exclusions>
        <exclusion>
          <artifactId>rococoa-cocoa</artifactId>
          <groupId>com.github.umjammer.rococoa</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>2.0.11</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-util-logging-asl</artifactId>
      <version>0.0.2</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.sshtools</groupId>
      <artifactId>two-slices</artifactId>
      <version>0.9.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.dorkbox</groupId>
      <artifactId>SystemTray</artifactId>
      <version>4.4</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
